# torchaudio_aligner

./: .gitignore  README.md  TODO.txt  __init__.py  pyproject.toml  requirements.txt  system_design.txt
examples/: Lab41-SRI-VOiCES-src-sp0307-ch127535-sg0042.txt
src/: __init__.py  api.py  audio_frontend.py  text_frontend.py
src/alignment/: __init__.py  api.py  base.py  gentle.py  mfa.py
src/alignment/wfst/: __init__.py  aligner.py  factor_transducer.py  k2_utils.py  lis_utils.py
src/audio_frontend/: __init__.py  enhancement.py  frontend.py  loaders.py  preprocessing.py  segmentation.py
src/labeling_utils/: __init__.py  backends.py  base.py  emissions.py  models.py  registry.py
src/labeling_utils/backends/: __init__.py  huggingface.py  nemo_backend.py  omniasr_backend.py  torchaudio_backend.py
src/misc/: __init__.py  install_utils.py
src/stitching_utils/: __init__.py  api.py  base.py  diff.py  edit_distance.py  lis.py
src/text_frontend/: __init__.py  frontend.py  loaders.py  normalization.py  romanization.py  tokenizers.py
src/visualization_utils/: __init__.py  audacity.py  audio_preview.py  gentle.py
test_notebooks/: Tutorial on obtaining accurate speech-to-text alignment for long audio and noisy text for 1100+ languages (ASRU).ipynb  multilingual_demo.ipynb  test_alignment.ipynb  test_audio_frontend.ipynb  test_download_resources.ipynb  test_labeling_utils.ipynb  test_longform_alignment.ipynb  test_omnilingual_asr.ipynb  test_omnilingual_asr2.ipynb  test_runner_colab.ipynb
tests/: __init__.py  conftest.py  test_alignment.ipynb  test_audio_frontend.ipynb  test_audio_frontend.py  test_labeling_utils.ipynb  test_longform_alignment.ipynb  test_stitching_utils.ipynb  test_text_frontend.ipynb  test_utils.py
tests/integration/: __init__.py  test_alignment_pipeline.py  test_api.py  test_exports.py  test_visualization.py  test_wfst_aligner.py
tests/unit/: test_aligned_char.py  test_aligned_word.py  test_alignment_config.py  test_alignment_result.py  test_text_normalization.py  test_word_index_mapping.py
tests/unit/audio_frontend/: __init__.py  test_enhancement.py  test_loaders.py  test_preprocessing.py  test_segmentation.py
tests/unit/labeling_utils/: __init__.py  test_base.py  test_emissions.py  test_models.py
tests/unit/stitching_utils/: __init__.py  test_base.py  test_edit_distance.py  test_lis.py
tests/unit/text_frontend/: __init__.py  test_loaders.py  test_romanization.py  test_tokenizers.py
tests/unit/visualization_utils/: __init__.py  test_audacity.py  test_audio_preview.py
