[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchaudio-aligner"
version = "0.1.0"
description = "Long-form fuzzy speech-to-text alignment for 1000+ languages"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ruizhe Huang", email = "huangruizhe@meta.com"},
]
keywords = [
    "speech-to-text",
    "forced-alignment",
    "audio",
    "speech",
    "ctc",
    "wfst",
    "multilingual",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.optional-dependencies]
# ============================================
# Core optional dependencies
# ============================================

# Audio loading backends
audio = [
    "torchcodec>=0.1.0",  # For torchaudio >= 2.8
    "soundfile>=0.12.0",  # Fallback audio loading
]

# Text loading and processing
text = [
    "requests>=2.28.0",       # URL text loading
    "beautifulsoup4>=4.11.0", # HTML parsing
    "pypdf>=3.0.0",           # PDF text extraction
]

# Text normalization (numbers to spoken form)
tn = [
    "num2words>=0.5.0",
]

# Romanization for non-Latin scripts
romanization = [
    "uroman-python>=1.2.0",
    "zhon>=2.0.0",  # CJK text processing
]

# Tokenizers (BPE and phoneme)
tokenizers = [
    "sentencepiece>=0.2.0",  # BPE tokenizer
    "cmudict>=1.0.0",        # CMU pronunciation dictionary
    "g2p_en>=2.1.0",         # English grapheme-to-phoneme
]

# ============================================
# Enhanced features
# ============================================

# Japanese morphological romanization (higher quality than uroman)
japanese = [
    "cutlet>=0.4.0",  # Installs fugashi and unidic automatically
]

# OCR for scanned PDFs (e.g., Hindi documents)
# Also requires: brew install poppler (macOS) or apt install poppler-utils (Linux)
ocr = [
    "easyocr>=1.7.0",
    "pdf2image>=1.16.0",
]

# Audio enhancement options
enhancement = [
    "pyloudnorm>=0.1.0",  # Loudness normalization
]

# Demucs - Source separation to extract vocals
demucs = [
    "demucs>=4.0.0",
    "pyloudnorm>=0.1.0",
]

# Lightweight noise reduction (CPU-friendly)
noisereduce = [
    "noisereduce>=3.0.0",
]

# DeepFilterNet - Deep learning noise suppression
deepfilter = [
    "deepfilternet>=0.5.0",
]

# ============================================
# Alternative alignment backends
# ============================================

# NeMo forced aligner
nemo = [
    "nemo_toolkit[asr]>=1.20.0",
]

# Montreal Forced Aligner
# Note: MFA is typically installed via conda: conda install -c conda-forge montreal-forced-aligner
# This provides the Python bindings if installed via pip
mfa = [
    "montreal-forced-aligner>=3.0.0",
]

# WFST operations (k2)
# Note: k2 requires specific version matching your PyTorch/CUDA version
# See: https://k2-fsa.github.io/k2/installation.html
# Install manually: pip install k2 -f https://k2-fsa.org/nightly/
wfst = []  # Empty - user must install k2 manually due to version constraints

# ============================================
# Bundle installations
# ============================================

# Core features (recommended for most users)
core = [
    "torchcodec>=0.1.0",
    "soundfile>=0.12.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pypdf>=3.0.0",
    "num2words>=0.5.0",
    "uroman-python>=1.2.0",
    "zhon>=2.0.0",
    "sentencepiece>=0.2.0",
]

# Full installation (everything except alternative backends)
full = [
    # Audio
    "torchcodec>=0.1.0",
    "soundfile>=0.12.0",
    # Text
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pypdf>=3.0.0",
    # TN
    "num2words>=0.5.0",
    # Romanization
    "uroman-python>=1.2.0",
    "zhon>=2.0.0",
    # Tokenizers
    "sentencepiece>=0.2.0",
    "cmudict>=1.0.0",
    "g2p_en>=2.1.0",
    # Japanese
    "cutlet>=0.4.0",
    # Enhancement
    "pyloudnorm>=0.1.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]

# Testing dependencies (minimal for CI)
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/huangruizhe/torchaudio-aligner"
Documentation = "https://github.com/huangruizhe/torchaudio-aligner"
Repository = "https://github.com/huangruizhe/torchaudio-aligner"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
